[package]
name = "dota2_webapi_bindings"
version = "0.1.0"
authors = ["sn99 <siddharthn.099@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.10"
serde = "1.0.116"
serde_json = "1.0.59"
serde_derive = "1.0.116"
